# AI-Escalation

./: .gitignore  CLAUDE.md  EXECUTIVE_ONE_PAGER.md  EXECUTIVE_SLIDES.md  Embedding.md  EscalationAI0126.py  IMPROVEMENTS.md  README.md  SLIDE_DECK_SUMMARY.md  Strategic_Report.xlsx  classification_feedback.xlsx  dashboard.py  dev-requirements.txt  export_utils.py  main.py  price_catalog.xlsx  pyproject.toml  pytest.ini  requirements.txt  run.py  shared_filters.py  shared_theme.py  unified_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml
escalation_ai/: __init__.py
escalation_ai/alerting/: __init__.py  smart_thresholds.py
escalation_ai/analysis/: __init__.py  category_drift.py  lessons_learned.py
escalation_ai/classification/: __init__.py
escalation_ai/core/: __init__.py  ai_engine.py  config.py  gpu_utils.py  logging_config.py  utils.py
escalation_ai/dashboard/: __init__.py  advanced_plotly_charts.py  analytics_view.py  app.py  esc_bridge.py  main_controller.py  ollama_health.py  planning_view.py  report_generator_view.py  shared_helpers.py  streamlit_app.py
escalation_ai/feedback/: __init__.py  feedback_learning.py  price_catalog.py
escalation_ai/financial/: __init__.py  metrics.py  visualizations.py
escalation_ai/models/: __init__.py  data_models.py
escalation_ai/pipeline/: __init__.py  orchestrator.py
escalation_ai/predictors/: __init__.py  recurrence.py  resolution_time.py  similar_tickets.py  vector_store.py
escalation_ai/reports/: __init__.py  report_generator.py
escalation_ai/scoring/: __init__.py
escalation_ai/visualization/: __init__.py  advanced_charts.py  chart_generator.py  chart_insights.py
pulse_dashboard/: app.py  requirements.txt
pulse_dashboard/files/: CLAUDE_CODE_PROMPT_PULSE_DASHBOARD (1).md  README.md  pulse_dashboard_complete.html  pulse_dashboard_full.py  requirements.txt
tests/: README.md  __init__.py  test_classification.py  test_financial.py  test_pipeline_integration.py  test_predictors.py  test_run.py  test_scoring.py  test_vector_store.py
(+38 files in other folders)
